Pull up the ladder into the pulpit

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,12 @@
 IN PROGRESS:
+* Much as I dislike class-based views, I gotta admit, the hand list looks pretty nice.  Maybe use that technique elsewhere.
+  Currently doing app:players.  Remaining:
+  - filter based on query string e.g. <http://localhost:9000/players/?seated=True>
+  - add a dropdown from which I can choose an existing tournament, and it'll filter based on *that*
 
 STILL TODO:
 * Investigate front-endy stuff as described in `docs/frontend-ideas.md`
 * Consider some sort of confirmation action after calls and plays: it's awfully easy to accidentally touch the screen, or click the mouse, and make a call or play that you didn't intend.
-* Much as I dislike class-based views, I gotta admit, the hand list looks pretty nice.  Maybe use that technique elsewhere.
 * I've kludged up a "LessAnnoyingLogger" class in the bot; either find, or create, something similar that bases its display-or-not decision on whether the current message is the same as the previous message -- as opposed to what it does now, which is: "is the count of messages (since it was last "reset") a power of two?".  This is an old technique; you see it in logs that say "previous message repeated 12345 times".
   https://docs.python.org/3/library/logging.handlers.html#logging.handlers.MemoryHandler might be useful here.
 * Dig further into https://github.com/django/daphne/issues/552 -- the devs indeed fixed the problem that I reported (i.e., the repro scenario that I provided now does the right thing), but it turns out that's not enough: when I start the docker stack, and then do "runme", the latter emits the CRITICAL warning but doesn't exit.
