--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
 IN PROGRESS:
-* Much as I dislike class-based views, I gotta admit, the hand list looks pretty nice.  Maybe use that technique elsewhere.
-  Currently doing app:players.  Remaining:
-  - filter based on query string e.g. <http://localhost:9000/players/?seated=True>
-  - add a dropdown from which I can choose an existing tournament, and it'll filter based on *that*
 
 STILL TODO:
 * Investigate front-endy stuff as described in `docs/frontend-ideas.md`
@@ -218,6 +214,8 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* Much as I dislike class-based views, I gotta admit, the hand list looks pretty nice.  Maybe use that technique elsewhere.
+  I did app:players.
 * Maybe have the bot keep [random state](https://docs.python.org/3.13/library/random.html#random.getstate) for each player, so that its behavior is deterministic.  It'd have to load that state from somewhere before asking the library to make a call or play, and then save it back right afterwards.  That state is pickleable, but not trivially json-able.
 * Often I'll be looking at the "current trick" panel of app:hand-dispatch, and it's my turn but I won't realize it.  Then I wonder "why is nobody playing".  I need some visual way to indicate that it's my turn to play -- maybe slide the carousel over to my hand, or flash green, or something.  Maybe flash the left-arrow thing green, suggesting that I slide over to see what's going on over there.
 
