--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,9 @@ STILL TODO:
 * consider https://django-registration.readthedocs.io
 
 * When bulding the docker image, the "chown" step takes an annoyingly long time (five seconds, maybe).  Perhaps I could eliminate that step by doing USER before any of the COPY commands.
+
+* Errors aren't clearly displayed.  For example: I started a game, then left it (in the auction) for a few hours; in that time, the play deadline expired.  When I came back to the page:
+  - There was no indication that the deadline had expired
 * Ideas from chess.offby1.info:
   - replace "django-types" with "django-stubs[compatible-mypy]"; the latter was easy to set up, and lets me do "mypy --strict".
     Also: django-types still doesn't know that the HttpResponse class has a "text" attribute, whereas [django-stubs does](https://github.com/typeddjango/django-stubs/commit/c3b4a7a7189ce7591b097ba54287e0d9c956fafe).
@@ -226,6 +229,8 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* If we make a call after the play deadline has expired, we see the "Uh oh" toast.
+
 * Switch to "uv".  There's already a "uv-ify" branch but it's pretty old.
 
 * When bulding the docker image, the "chown" step takes an annoyingly long time (five seconds, maybe).  Perhaps I could eliminate that step by doing USER before any of the COPY commands.
