--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 IN PROGRESS:
 
 STILL TODO:
+* consider https://django-registration.readthedocs.io
+
 * When bulding the docker image, the "chown" step takes an annoyingly long time (five seconds, maybe).  Perhaps I could eliminate that step by doing USER before any of the COPY commands.
 * Ideas from chess.offby1.info:
   - switch to "uv".  There's already a "uv-ify" branch but it's pretty old.
