--- a/TODO.txt
+++ b/TODO.txt
@@ -118,6 +118,7 @@ STILL TODO:
   I *think* "Getting a confirmed email address" is something that django, or a widely-used third-party library, can do for me.
 
 * Replace `app.models.tournament.check_for_expirations` with something more sensible
+  - Would Celery work? if not,why not?
   - I've got a "django-q2" branch that uses a third-party scheduler; iirc it kinda mostly works.
   - I've also got a [Django-tasks](https://github.com/realOrangeOne/django-tasks) branch.  However, it's not clear that I can tell a task to run e.g. "0 minutes after the current tournament's play-completion deadline passes"; instead, it looks like I can only specify a time in a decorator, which of course only gets evaluated once, when the web server starts.
   - <https://django-tasks-scheduler.readthedocs.io/en/latest/> also exists! Ai yi yi, paradox of choice
