--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,14 @@
 IN PROGRESS:
 
 STILL TODO:
+* It seems there's a "standard" notation for bridge hands -- [pbn](https://www.tistis.nl/pbn/).  Maybe support it?
+* Better bot play! "lorserker/ben" (below) is one idea, but I couldn't get that working.
+  - <https://endplay.readthedocs.io> is at least installable.  So far this is the only package I've found that seems worthwhile.
+  Some hits from searching for `python "duplicate" bridge engine`:
+  - https://github.com/BSalita/ML-Contract-Bridge also requires anaconda.  The repo appears to be a collection of jupyter notebooks, plus some code which uses the C++ double-dummy solver.
+  - https://github.com/bookchris/ben is a fork of lorserker/ben; maybe it actually works.  No Dockerfile, though :-|
+  - https://www.reddit.com/r/bridge/comments/j7m7eo/tricky_bridge_is_live_on_ios/ refers to a bot <https://www.meadowlarksoftware.us/> but that's a 404
+* Much as I dislike class-based views, I gotta admit, the hand and player lists (using django_tables2) look pretty nice.  Maybe use that technique elsewhere.
 * Look into [playwright](https://playwright.dev/) -- might be an easier-to-use selenium
 * Adopt some of [the postgres/docker/justfile grooviness from my django-chess project](https://gitlab.com/offby1/django-chess/-/commit/36be3973343ba179a392382df2a02f864c7dfda2)
 * Look into [Django-Htmx-Patterns](https://github.com/spookylukey/django-htmx-patterns/tree/master)
