Note more long-suit display trouble

--- a/TODO.txt
+++ b/TODO.txt
@@ -73,7 +73,7 @@ STILL TODO:
 
   I actually did this in "main" but it triggers some sorta race condition, leading to an assertion failure, in main 😭
 
-* scrolling from my hand, through the dummy, to the current trick, can be tedious if both hands have a long suit.  Clicking the little left'n'right arrows doesn't scroll by the entire <li>; instead it seems to scroll by the width in pixels of the visible area.  This is a reasonable thing for a scrollbar to do, but it's not convenient here.  So either
+* Long suit trouble: scrolling from my hand, through the dummy, to the current trick, can be tedious if both hands have a long suit.  Clicking the little left'n'right arrows doesn't scroll by the entire <li>; instead it seems to scroll by the width in pixels of the visible area.  This is a reasonable thing for a scrollbar to do, but it's not convenient here.  So either
   - make it scroll by one <li> at a time, instead; or maybe
   - bring back the little dots along the bottom that did exactly that
 
@@ -81,6 +81,15 @@ STILL TODO:
   - `just fixture usual_setup`
   - `just --no-deps runme`
   - point browser at <http://localhost:9000/hand/1/> ; login as "Clint Eastwood"
+
+  Similarly, an archived hand with long suits displays badly.
+
+  To repro:
+  - `just fixture nearly_completed_tournament`
+  - `just --no-deps runme`
+  - somehow expire the tournament
+  - point browser at <http://localhost:9000/hand/1/> ; login as "Clint Eastwood"
+  - note that the long suits overwrite the three-by-three-trick-display
 
 * We send an SSE event containing the hand-div on every play, but about half of that div -- all the "toast" stuff -- never varies.  We'd save perhaps 1K per event if we only sent the four suit divs.
 
