Semi-randomly poke at stuff ...
... to allow more cards to be visible on mobile

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 IN PROGRESS:
+* Cards are way too large on mobile.  Even when I tell Chrome to "zoom" down to 50%, only two and a half cards can fit in the slot I've allocated for them.   See [The-Cards-Are-Too-Damned-Big.png]
+
+  - Maybe have the cards not be square -- have them be, I dunno, shaped like *actual playing cards* -- taller than they are wide.
 
 STILL TODO:
 * The "let the bot play for me button" is still flaky.  Hard to describe but easy to see if we're doing "big_bot_stress" with a tempo of 0.
-
-* Cards are way too large on mobile.  Even when I tell Chrome to "zoom" down to 50%, only two and a half cards can fit in the slot I've allocated for them.   See [The-Cards-Are-Too-Damned-Big.png]
-
 * It seems there's a "standard" notation for bridge hands -- [pbn](https://www.tistis.nl/pbn/).  Maybe support it?
   - Specifically, add "export to PBN" button to the hand archive page
 * Better bot play! "lorserker/ben" (below) is one idea, but I couldn't get that working.
