--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 IN PROGRESS:
-* Much as I dislike class-based views, I gotta admit, the hand and player lists (using django_tables2) look pretty nice.  Maybe use that technique elsewhere (`board_list_view`, `tournament_list_view`).
+* Much as I dislike class-based views, I gotta admit, the hand and player lists (using django_tables2) look pretty nice.  Maybe use that technique elsewhere (`tournament_list_view`).
 
 STILL TODO:
 * The "let the bot play for me button" is still flaky.  Hard to describe but easy to see if we're doing "big_bot_stress" with a tempo of 0.
