--- a/TODO.txt
+++ b/TODO.txt
@@ -1,26 +1,16 @@
 IN PROGRESS:
 
 STILL TODO:
+* Consider https://data-star.dev/; aims to be easier to use than HTMX
 * It seems there's a "standard" notation for bridge hands -- [pbn](https://www.tistis.nl/pbn/).  Maybe support it?
   - Specifically, add "export to PBN" button to the hand archive page
-* Better bot play! "lorserker/ben" (below) is one idea, but I couldn't get that working.
-  - <https://endplay.readthedocs.io> is at least installable.  So far this is the only package I've found that seems worthwhile.
-  Some hits from searching for `python "duplicate" bridge engine`:
-  - https://github.com/BSalita/ML-Contract-Bridge also requires anaconda.  The repo appears to be a collection of jupyter notebooks, plus some code which uses the C++ double-dummy solver.
-  - https://github.com/bookchris/ben is a fork of lorserker/ben; maybe it actually works.  No Dockerfile, though :-|
-  - https://www.reddit.com/r/bridge/comments/j7m7eo/tricky_bridge_is_live_on_ios/ refers to a bot <https://www.meadowlarksoftware.us/> but that's a 404
 * Adopt some of [the postgres/docker/justfile grooviness from my django-chess project](https://gitlab.com/offby1/django-chess/-/commit/36be3973343ba179a392382df2a02f864c7dfda2)
 * Look into [Django-Htmx-Patterns](https://github.com/spookylukey/django-htmx-patterns/tree/master)
-* Why am I not using [this](https://github.com/lorserker/ben)?
-  - answer: because I only just now discovered it.
-  - and because it's not ready for prime time.  The docker container immediately fails with a complaint about being unable to import "colorama"; adding "colorama" to requirements.txt and then rebuilding the image doesn't help
-  - local development looks hard, because it uses anaconda and x86-specific stuff (i.e., I can't use my Mac and would have to use an x86 box)
 * consider https://django-registration.readthedocs.io
 
 * Ideas from chess.offby1.info:
   - replace "django-types" with "django-stubs[compatible-mypy]"; the latter was easy to set up, and lets me do "mypy --strict".
     Also: django-types still doesn't know that the HttpResponse class has a "text" attribute, whereas [django-stubs does](https://github.com/typeddjango/django-stubs/commit/c3b4a7a7189ce7591b097ba54287e0d9c956fafe).
-* Consider switching from mypy to pyright -- Luke Plant (who uses Emacs) [has done so](https://lukeplant.me.uk/blog/posts/python-type-hints-pyastgrep-case-study/#pyright)
 * Investigate front-endy stuff as described in `docs/frontend-ideas.md`
 * Consider some sort of confirmation action after calls and plays: it's awfully easy to accidentally touch the screen, or click the mouse, and make a call or play that you didn't intend.
 * I've kludged up a "LessAnnoyingLogger" class in the bot; either find, or create, something similar that bases its display-or-not decision on whether the current message is the same as the previous message -- as opposed to what it does now, which is: "is the count of messages (since it was last "reset") a power of two?".  This is an old technique; you see it in logs that say "previous message repeated 12345 times".
@@ -232,6 +222,13 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* Consider switching from mypy to pyright -- Luke Plant (who uses Emacs) [has done so](https://lukeplant.me.uk/blog/posts/python-type-hints-pyastgrep-case-study/#pyright)
+* Better bot play! "lorserker/ben" (below) is one idea, but I couldn't get that working.
+  - <https://endplay.readthedocs.io> is at least installable.  So far this is the only package I've found that seems worthwhile.
+  Some hits from searching for `python "duplicate" bridge engine`:
+  - https://github.com/BSalita/ML-Contract-Bridge also requires anaconda.  The repo appears to be a collection of jupyter notebooks, plus some code which uses the C++ double-dummy solver.
+  - https://github.com/bookchris/ben is a fork of lorserker/ben; maybe it actually works.  No Dockerfile, though :-|
+  - https://www.reddit.com/r/bridge/comments/j7m7eo/tricky_bridge_is_live_on_ios/ refers to a bot <https://www.meadowlarksoftware.us/> but that's a 404
 * The "let the bot play for me button" is still flaky.  Hard to describe but easy to see if we're doing "big_bot_stress" with a tempo of 0.
 * Cards are way too large on mobile.  Even when I tell Chrome to "zoom" down to 50%, only two and a half cards can fit in the slot I've allocated for them.   See [The-Cards-Are-Too-Damned-Big.png]
 
@@ -1323,6 +1320,11 @@ DONE:
     `me=1&them=2&action=partnerup&action=partnerup` -- why is the "action" duplicated?
 
 NOT DONE:
+* Why am I not using [this](https://github.com/lorserker/ben)?
+  - answer: because I only just now discovered it.
+  - and because it's not ready for prime time.  The docker container immediately fails with a complaint about being unable to import "colorama"; adding "colorama" to requirements.txt and then rebuilding the image doesn't help
+  - local development looks hard, because it uses anaconda and x86-specific stuff (i.e., I can't use my Mac and would have to use an x86 box)
+  I've incorporated "endplay" into the bridge library; I think it solves roughly the same problem
 * Look into [playwright](https://playwright.dev/) -- might be an easier-to-use selenium
   - I did, but iiuc, it requires that I use pytest-django's "live_server" fixture, and that is broken: it isn't serving any of the static files.  In particular, all my lovely javascript is just a buncha 404s, so the page is utterly static :-|
 
